fix overflow hidden DONE

--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ CAROUSEL
 .carousel {
   /* On va faire bouger le panorama par rapport à cet élement là */
   position: relative;
-  /* overflow: hidden; */
+  overflow: hidden;
 }
 
 .carousel__container {
